fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-251-50acddfb96.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function UnderConstruction() {
  return (
    <Center bg="$background" overflow="hidden" px="40px" py="120px">
      <Box
        bg="#C8A46B"
        left="-196.23px"
        maskImage="url(/icons/backgroundImage.svg)"
        maskPos="center"
        maskRepeat="no-repeat"
        maskSize="contain"
        pos="absolute"
        top="-908px"
        transform="rotate(11.24deg)"
        transformOrigin="top left"
        w="100%"
      />
      <VStack alignItems="center" gap="120px">
        <VStack alignItems="center" gap="60px">
          <Box
            aspectRatio="1.91"
            bg="#B1874F"
            h="104px"
            maskImage="url(/icons/path1208.svg)"
            maskPos="center"
            maskRepeat="no-repeat"
            maskSize="contain"
            w="200px"
          />
          <VStack alignItems="center" gap="20px">
            <Text
              color="$primaryAccent"
              fontFamily="MaruBuri"
              fontSize="32px"
              fontWeight="700"
              letterSpacing="0.04em"
              lineHeight="normal"
            >
              Under Construction
            </Text>
            <Text
              color="$primaryAccent"
              fontFamily="MaruBuri"
              fontSize="56px"
              fontWeight="700"
              letterSpacing="-0.02em"
              lineHeight="normal"
              wordBreak="keep-all"
            >
              제주국제관악제 리뉴얼 알림
            </Text>
          </VStack>
          <VStack alignItems="center" gap="20px">
            <Text
              color="$text"
              fontFamily="Noto Sans KR"
              fontSize="20px"
              fontWeight="400"
              letterSpacing="-0.03em"
              lineHeight="2"
              textAlign="center"
              wordBreak="keep-all"
            >
              더 나은 서비스 제공을 위해 시스템 점검 및 리뉴얼을 진행 중입니다.<br />이용에 불편을 드려 죄송하며, 빠른 시일 내에 다시 찾아뵙겠습니다.
            </Text>
            <Text
              color="$textLight"
              fontFamily="Noto Sans KR"
              fontSize="16px"
              fontWeight="400"
              letterSpacing="-0.02em"
              lineHeight="1.8"
              textAlign="center"
            >
              We are currently updating our website to serve you better. <br />We apologize for the inconvenience.
            </Text>
          </VStack>
        </VStack>
        <VStack alignItems="center" gap="16px">
          <Text
            color="$primary"
            fontFamily="Noto Sans KR"
            fontSize="17px"
            fontWeight="700"
            letterSpacing="-0.02em"
            lineHeight="1.7"
            wordBreak="keep-all"
          >
            제주국제관악제 최신 소식 확인하기
          </Text>
          <Flex gap="30px">
            <Image aspectRatio="1" borderRadius="4px" boxSize="32px" src="/icons/instagram_15713420 1.svg" />
            <Image aspectRatio="1" borderRadius="4px" boxSize="32px" src="/icons/facebook_1384053 1.svg" />
            <Flex
              aspectRatio="1"
              bg="#FFF"
              borderRadius="4px"
              boxSize="32px"
              overflow="hidden"
            >
              <Image boxSize="32px" src="/icons/Layer 2.svg" />
            </Flex>
          </Flex>
          <Text
            color="$text"
            fontFamily="Noto Sans KR"
            fontSize="17px"
            fontWeight="500"
            letterSpacing="-0.02em"
            lineHeight="1.7"
            wordBreak="keep-all"
          >
            문의 : 064-722-8704 / bandfestival@hanmail.net
          </Text>
        </VStack>
      </VStack>
    </Center>
  )
}"
