fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-256-baf32cc08e.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export interface StatusProps {
  status: 'success' | 'warning' | 'error'
}

export function Status({ status }: StatusProps) {
  return (
    <Box
      bg="#FFF"
      boxSize="24px"
      maskImage="url(/icons/Glyph.svg)"
      maskPos="center"
      maskRepeat="no-repeat"
      maskSize="contain"
    />
  )
}"
