fixtures/devup-figma-plugin/snapshots/codegen/upstream-root-257-f23261dd4f.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

[
  {
    "code": "<Box boxSize="100%" />",
    "language": "TYPESCRIPT",
    "title": "Pure Code",
  },
  {
    "code": "<Test />",
    "language": "TYPESCRIPT",
    "title": "Usage",
  },
  {
    "code": 
"import { Box } from '@devup-ui/react'

export function Test() {
  return <Box boxSize="100%" />
}"
,
    "language": "TYPESCRIPT",
    "title": "Test",
  },
  {
    "code": 
"mkdir -p src/components

echo 'import { Box } from \'@devup-ui/react\'

export function Test() {
  return <Box boxSize="100%" />
}' > src/components/Test.tsx"
,
    "language": "BASH",
    "title": "Test - CLI (Bash)",
  },
  {
    "code": 
"New-Item -ItemType Directory -Force -Path src\components | Out-Null

@'
import { Box } from '@devup-ui/react'

export function Test() {
  return <Box boxSize="100%" />
}
'@ | Out-File -FilePath src\components\Test.tsx -Encoding UTF8"
,
    "language": "BASH",
    "title": "Test - CLI (PowerShell)",
  },
]
