fixtures/devup-figma-plugin/snapshots/codegen/upstream-root-258-5cfe8baba5.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

[
  {
    "code": "<Box boxSize="100%" />",
    "language": "TYPESCRIPT",
    "title": "Pure Code",
  },
  {
    "code": "<Box boxSize="100%" />",
    "language": "TYPESCRIPT",
    "title": "Main",
  },
]
