fixtures/devup-figma-plugin/snapshots/codegen/upstream-root-260-2dfc3ae054.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

[
  {
    "code": 
"<Box boxSize="100%">
  <Box boxSize="100%" />
  <Box boxSize="100%" />
</Box>"
,
    "language": "TYPESCRIPT",
    "title": "Pure Code",
  },
  {
    "code": 
"<Box boxSize="100%">
  <Box boxSize="100%" />
  <Box boxSize="100%" />
</Box>"
,
    "language": "TYPESCRIPT",
    "title": "ResponsiveSection",
  },
  {
    "code": 
"import { Box } from '@devup-ui/react'

export function ResponsiveSection() {
  return <Box boxSize="100%" />
}"
,
    "language": "TYPESCRIPT",
    "title": "ResponsiveSection - Responsive",
  },
  {
    "code": 
"mkdir -p src/components

echo 'import { Box } from \'@devup-ui/react\'

export function ResponsiveSection() {
  return <Box boxSize="100%" />
}' > src/components/ResponsiveSection.tsx"
,
    "language": "BASH",
    "title": "ResponsiveSection - Responsive CLI (Bash)",
  },
  {
    "code": 
"New-Item -ItemType Directory -Force -Path src\components | Out-Null

@'
import { Box } from '@devup-ui/react'

export function ResponsiveSection() {
  return <Box boxSize="100%" />
}
'@ | Out-File -FilePath src\components\ResponsiveSection.tsx -Encoding UTF8"
,
    "language": "BASH",
    "title": "ResponsiveSection - Responsive CLI (PowerShell)",
  },
]
